# graph-rag-summarizer

./: .env.cloud  .gitignore  AGENTS.md  CONTEXT.md  MISSION.md  NOTES.md  README.md  RESOURCES.md  docker-compose.yml  env.example  main.py  modal_backend.py  pyproject.toml  requirements.txt  upload_to_qdrant.py
assets/: lesson.css
config/: settings.py
docs/: 2026-07-04-handoff-dual-backend-next-steps.md  ONBOARDING_STARTER_ARCHITECTURE.md  handoff-2026-07-05-profile-driven-single-launcher-implementation.md  handoff-2026-07-06-flow-project-next-development.md  handoff-2026-07-13-persistent-graph-implementation.md  issue-2026-07-18-launcher-interactive-recovery.md  prd-2026-07-04-cross-platform-local-embedding-runtime.md  prd-2026-07-05-multi-provider-llm-fallback.md  prd-2026-07-05-safe-pdf-ingest-modes.md  prd-2026-07-11-adaptive-global-graph-construction.md  prd-2026-07-modal-gpu-ingest-run.md  runbook-single-launcher.md  slice-2026-07-05-multi-provider-llm-fallback.md  slice-2026-07-11-adaptive-global-graph-construction.md  slice-2026-07-14-bounded-global-relation-recovery.md  todo-in-progress.md
embedding/: cache_paths.py  embedder.py  runtime_resolver.py
evaluation/: evaluator.py  quality_checker.py
graph/: community_detector.py  entity_extractor.py  graph_analyzer.py  graph_builder.py  persistent.py  relation_evidence.py  relation_recovery.py
launcher/: __init__.py  contract.py  runners.py
lessons/: 0001-flow-project-overview.html
pipeline/: feedback_loop.py
preprocessing/: docling_loader.py  image_exporter.py
scripts/: check_cloud_connections.py  (+1 more)
(+86 files in other folders)
